fixes thread 75799
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@38301 ebf7c1c2-ba36-0410-9fe8-c592906822b4

Former-commit-id: cc1b3f2f540f837340a626eda85bb1cecc83a6b5